--- a/examples/GPKit_test.ipynb
+++ b/examples/GPKit_test.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "a4b6d910-833b-45b7-9ae6-b4f4538b678d",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "bb286861-55e7-4fbd-ae61-394e6ad93703",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
       "Using solver 'cvxopt'\n",
       " for 1 free variables\n",
       "  in 2 posynomial inequalities.\n",
-      "Solving took 0.015 seconds.\n"
+      "Solving took 0.0328 seconds.\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "c08667d0-5f5f-4df7-8c6a-ab962230aa2c",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "1d0813a5-2961-47d4-9aa6-40b7e626fd35",
    "metadata": {},
    "outputs": [
@@ -200,8 +200,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "157cb845-0b68-4945-bdbd-b9ff50cd51e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5000000000381064\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = Variable(\"x\")\n",
+    "x_squared_min = Variable(\"x^2_{min}\", 2)\n",
+    "sol = Model(x, [x_squared_min <= x**2]).solve(verbosity=0)\n",
+    "sens_x_min = sol[\"sensitivities\"][\"variables\"][x_squared_min]\n",
+    "print(sens_x_min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53fe885d-4b49-46fb-bc74-1018fe11c22d",
    "metadata": {},
    "outputs": [],
    "source": []
