--- a/examples/GPKit_test.ipynb
+++ b/examples/GPKit_test.ipynb
@@ -1,232 +1,410 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "6e4a4909-6fd9-494c-8478-0ede8fc65e01",
-   "metadata": {},
-   "source": [
-    "\n",
-    "# Using GPKit\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "96dc2d26-7a7c-4593-877f-00dc8eb23739",
-   "metadata": {},
-   "source": [
-    "GPKit is a toolbox adding a layer of abstraction over Geometric Program solvers. This notebook is my first attempt messing around with it, and eventually I hope to use it within PyAVD and RocketPy."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1157d0d5-f113-4b97-b2db-e91f87103792",
-   "metadata": {},
-   "source": [
-    "### Basic - Minimising $x$ with a [$x >= 1$] constraint"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a4b6d910-833b-45b7-9ae6-b4f4538b678d",
+   "id": "305df0bd-5260-4da3-85ec-7e724997c596",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Cost Function\n",
+      "-------------\n",
+      " Wfuel[0]\n",
+      "\n",
+      "Constraints\n",
+      "-----------\n",
+      " Mission\n",
+      "  \"fuel constraints\":\n",
+      "    Wfuel[:-1] ≥ Wfuel[1:] + Wburn[:-1]\n",
+      "    Wfuel[3] ≥ Wburn[3]\n",
+      "\n",
+      "  FlightSegment\n",
+      "   AircraftP\n",
+      "    Wburn[:] ≥ 0.1·D[:]\n",
+      "    Aircraft.W + Wfuel[:] ≤ 0.5·rho[:]·CL[:]·S·V[:]²\n",
+      "    \"performance\":\n",
+      "      WingAero\n",
+      "       D[:] ≥ 0.5·rho[:]·V[:]²·CD[:]·S\n",
+      "       Re[:] = rho[:]·V[:]·c/mu[:]\n",
+      "       CD[:] ≥ 0.074/Re[:]^0.2 + CL[:]²/π/A/e[:]\n",
+      "\n",
+      "   FlightState\n",
+      "    (no constraints)\n",
+      "\n",
+      " Aircraft\n",
+      "  Aircraft.W ≥ Aircraft.Fuselage.W + Aircraft.Wing.W\n",
+      "  Fuselage\n",
+      "   (no constraints)\n",
+      "\n",
+      "  Wing\n",
+      "   c = (S/A)^0.5\n",
+      "   Aircraft.Wing.W ≥ S·Aircraft.Wing.rho\n",
+      "\n",
+      "Optimal Cost\n",
+      "------------\n",
+      " 1.091\n",
+      "\n",
+      "Free Variables\n",
+      "--------------\n",
+      "      | Mission.FlightSegment.AircraftP.WingAero\n",
+      "    D : [ 2.74      2.73      2.72      2.72     ]  [lbf] drag force\n",
+      "\n",
+      "      | Mission.FlightSegment.AircraftP\n",
+      "Wburn : [ 0.274     0.273     0.272     0.272    ]  [lbf] segment fuel burn\n",
+      "Wfuel : [ 1.09      0.817     0.544     0.272    ]  [lbf] fuel weight\n",
+      "\n",
+      "      | Aircraft.Wing\n",
+      "    S : 44.14                                       [ft²] surface area\n",
+      "    W : 44.14                                       [lbf] weight\n",
+      "    c : 1.279                                       [ft]  mean chord\n",
+      "\n",
+      "      | Aircraft\n",
+      "    W : 144.1                                       [lbf] weight\n",
+      "\n",
+      "Variable Sensitivities\n",
+      "----------------------\n",
+      "    | Aircraft.Fuselage\n",
+      "  W : +0.97  weight\n",
+      "\n",
+      "    | Aircraft.Wing\n",
+      "  A : -0.67  aspect ratio\n",
+      "rho : +0.43  areal density\n",
+      "\n",
+      "Next Most Sensitive Variables\n",
+      "-----------------------------\n",
+      "    | Mission.FlightSegment.AircraftP.WingAero\n",
+      "  e : [ -0.18     -0.18     -0.18     -0.18    ] Oswald efficiency\n",
+      "\n",
+      "    | Mission.FlightSegment.FlightState\n",
+      "  V : [ -0.22     -0.21     -0.21     -0.21    ] true airspeed\n",
+      "rho : [ -0.12     -0.11     -0.11     -0.11    ] air density\n",
+      "\n",
+      "Most Sensitive Constraints\n",
+      "--------------------------\n",
+      "       | Aircraft\n",
+      "  +1.4 : .W ≥ .Fuselage.W + .Wing.W\n",
+      "\n",
+      "       | Mission\n",
+      "    +1 : Wfuel[0] ≥ Wfuel[1] + Wburn[0]\n",
+      " +0.75 : Wfuel[1] ≥ Wfuel[2] + Wburn[1]\n",
+      "  +0.5 : Wfuel[2] ≥ Wfuel[3] + Wburn[2]\n",
+      "\n",
+      "       | Aircraft.Wing\n",
+      " +0.43 : .W ≥ S·.rho\n",
+      "\n",
+      "Insensitive Constraints |below +1e-05|\n",
+      "--------------------------------------\n",
+      "(none)\n",
+      "\n",
+      "Solution Diff (for selected variables)\n",
+      "======================================\n",
+      "(argument is the baseline solution)\n",
+      "\n",
+      "Constraint Differences\n",
+      "**********************\n",
+      "@@ -31,3 +31,4 @@\n",
+      "   Wing\n",
+      "    c = (S/A)^0.5\n",
+      "    Aircraft.Wing.W ≥ S·Aircraft.Wing.rho\n",
+      "+ Wburn[:] ≥ 0.2·D[:]\n",
+      "\n",
+      "**********************\n",
+      "\n",
+      "Relative Differences |above 1%|\n",
+      "-------------------------------\n",
+      "Wburn : [ +102.1%   +101.6%   +101.1%   +100.5%  ] segment fuel burn\n",
+      "Wfuel : [ +101.3%   +101.1%   +100.8%   +100.5%  ] fuel weight\n",
+      "    D : [   +1.1%       -         -         -    ] drag force\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "from gpkit import Variable, Model\n",
+    "\"\"\"Modular aircraft concept\"\"\"\n",
+    "import pickle\n",
     "import numpy as np\n",
+    "from gpkit import Model, Vectorize, parse_variables\n",
+    "from gpkit.interactive.sankey import Sankey\n",
     "\n",
-    "# Free variable\n",
-    "x = Variable(\"x\")\n",
     "\n",
-    "# Constraint - list type of Boolean expressions\n",
-    "constraints = [x >= 1.5]\n",
+    "class AircraftP(Model):\n",
+    "    \"\"\"Aircraft flight physics: weight <= lift, fuel burn\n",
     "\n",
-    "# Objective - solver attempts to minimize this variable\n",
-    "objective = x ** 0.5\n",
+    "    Variables\n",
+    "    ---------\n",
+    "    Wfuel  [lbf]  fuel weight\n",
+    "    Wburn  [lbf]  segment fuel burn\n",
     "\n",
-    "m = Model(objective, constraints)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3be398f2-a082-4da7-aa0f-7a12acfeabe8",
-   "metadata": {},
-   "source": [
-    "Now solve-"
+    "    Upper Unbounded\n",
+    "    ---------------\n",
+    "    Wburn, aircraft.wing.c, aircraft.wing.A\n",
+    "\n",
+    "    Lower Unbounded\n",
+    "    ---------------\n",
+    "    Wfuel, aircraft.W, state.mu\n",
+    "\n",
+    "    \"\"\"\n",
+    "    @parse_variables(__doc__, globals())\n",
+    "    def setup(self, aircraft, state):\n",
+    "        self.aircraft = aircraft\n",
+    "        self.state = state\n",
+    "\n",
+    "        self.wing_aero = aircraft.wing.dynamic(aircraft.wing, state)\n",
+    "        self.perf_models = [self.wing_aero]\n",
+    "\n",
+    "        W = aircraft.W\n",
+    "        S = aircraft.wing.S\n",
+    "\n",
+    "        V = state.V\n",
+    "        rho = state.rho\n",
+    "\n",
+    "        D = self.wing_aero.D\n",
+    "        CL = self.wing_aero.CL\n",
+    "\n",
+    "        return Wburn >= 0.1*D, W + Wfuel <= 0.5*rho*CL*S*V**2, {\n",
+    "            \"performance\":\n",
+    "                self.perf_models}\n",
+    "\n",
+    "\n",
+    "class Aircraft(Model):\n",
+    "    \"\"\"The vehicle model\n",
+    "\n",
+    "    Variables\n",
+    "    ---------\n",
+    "    W  [lbf]  weight\n",
+    "\n",
+    "    Upper Unbounded\n",
+    "    ---------------\n",
+    "    W\n",
+    "\n",
+    "    Lower Unbounded\n",
+    "    ---------------\n",
+    "    wing.c, wing.S\n",
+    "    \"\"\"\n",
+    "    @parse_variables(__doc__, globals())\n",
+    "    def setup(self):\n",
+    "        self.fuse = Fuselage()\n",
+    "        self.wing = Wing()\n",
+    "        self.components = [self.fuse, self.wing]\n",
+    "\n",
+    "        return [W >= sum(c.W for c in self.components),\n",
+    "                self.components]\n",
+    "\n",
+    "    dynamic = AircraftP\n",
+    "\n",
+    "\n",
+    "class FlightState(Model):\n",
+    "    \"\"\"Context for evaluating flight physics\n",
+    "\n",
+    "    Variables\n",
+    "    ---------\n",
+    "    V     40       [knots]    true airspeed\n",
+    "    mu    1.628e-5 [N*s/m^2]  dynamic viscosity\n",
+    "    rho   0.74     [kg/m^3]   air density\n",
+    "\n",
+    "    \"\"\"\n",
+    "    @parse_variables(__doc__, globals())\n",
+    "    def setup(self):\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "class FlightSegment(Model):\n",
+    "    \"\"\"Combines a context (flight state) and a component (the aircraft)\n",
+    "\n",
+    "    Upper Unbounded\n",
+    "    ---------------\n",
+    "    Wburn, aircraft.wing.c, aircraft.wing.A\n",
+    "\n",
+    "    Lower Unbounded\n",
+    "    ---------------\n",
+    "    Wfuel, aircraft.W\n",
+    "\n",
+    "    \"\"\"\n",
+    "    def setup(self, aircraft):\n",
+    "        self.aircraft = aircraft\n",
+    "\n",
+    "        self.flightstate = FlightState()\n",
+    "        self.aircraftp = aircraft.dynamic(aircraft, self.flightstate)\n",
+    "\n",
+    "        self.Wburn = self.aircraftp.Wburn\n",
+    "        self.Wfuel = self.aircraftp.Wfuel\n",
+    "\n",
+    "        return {\"aircraft performance\": self.aircraftp,\n",
+    "                \"flightstate\": self.flightstate}\n",
+    "\n",
+    "\n",
+    "class Mission(Model):\n",
+    "    \"\"\"A sequence of flight segments\n",
+    "\n",
+    "    Upper Unbounded\n",
+    "    ---------------\n",
+    "    aircraft.wing.c, aircraft.wing.A\n",
+    "\n",
+    "    Lower Unbounded\n",
+    "    ---------------\n",
+    "    aircraft.W\n",
+    "    \"\"\"\n",
+    "    def setup(self, aircraft):\n",
+    "        self.aircraft = aircraft\n",
+    "\n",
+    "        with Vectorize(4):  # four flight segments\n",
+    "            self.fs = FlightSegment(aircraft)\n",
+    "\n",
+    "        Wburn = self.fs.aircraftp.Wburn\n",
+    "        Wfuel = self.fs.aircraftp.Wfuel\n",
+    "        self.takeoff_fuel = Wfuel[0]\n",
+    "\n",
+    "        return {\n",
+    "            \"fuel constraints\":\n",
+    "                [Wfuel[:-1] >= Wfuel[1:] + Wburn[:-1],\n",
+    "                 Wfuel[-1] >= Wburn[-1]],\n",
+    "            \"flight segment\":\n",
+    "                self.fs}\n",
+    "\n",
+    "\n",
+    "class WingAero(Model):\n",
+    "    \"\"\"Wing aerodynamics\n",
+    "\n",
+    "    Variables\n",
+    "    ---------\n",
+    "    CD      [-]    drag coefficient\n",
+    "    CL      [-]    lift coefficient\n",
+    "    e   0.9 [-]    Oswald efficiency\n",
+    "    Re      [-]    Reynold's number\n",
+    "    D       [lbf]  drag force\n",
+    "\n",
+    "    Upper Unbounded\n",
+    "    ---------------\n",
+    "    D, Re, wing.A, state.mu\n",
+    "\n",
+    "    Lower Unbounded\n",
+    "    ---------------\n",
+    "    CL, wing.S, state.mu, state.rho, state.V\n",
+    "    \"\"\"\n",
+    "    @parse_variables(__doc__, globals())\n",
+    "    def setup(self, wing, state):\n",
+    "        self.wing = wing\n",
+    "        self.state = state\n",
+    "\n",
+    "        c = wing.c\n",
+    "        A = wing.A\n",
+    "        S = wing.S\n",
+    "        rho = state.rho\n",
+    "        V = state.V\n",
+    "        mu = state.mu\n",
+    "\n",
+    "        return [D >= 0.5*rho*V**2*CD*S,\n",
+    "                Re == rho*V*c/mu,\n",
+    "                CD >= 0.074/Re**0.2 + CL**2/np.pi/A/e]\n",
+    "\n",
+    "\n",
+    "class Wing(Model):\n",
+    "    \"\"\"Aircraft wing model\n",
+    "\n",
+    "    Variables\n",
+    "    ---------\n",
+    "    W        [lbf]       weight\n",
+    "    S        [ft^2]      surface area\n",
+    "    rho    1 [lbf/ft^2]  areal density\n",
+    "    A     27 [-]         aspect ratio\n",
+    "    c        [ft]        mean chord\n",
+    "\n",
+    "    Upper Unbounded\n",
+    "    ---------------\n",
+    "    W\n",
+    "\n",
+    "    Lower Unbounded\n",
+    "    ---------------\n",
+    "    c, S\n",
+    "    \"\"\"\n",
+    "    @parse_variables(__doc__, globals())\n",
+    "    def setup(self):\n",
+    "        return [c == (S/A)**0.5,\n",
+    "                W >= S*rho]\n",
+    "\n",
+    "    dynamic = WingAero\n",
+    "\n",
+    "\n",
+    "class Fuselage(Model):\n",
+    "    \"\"\"The thing that carries the fuel, engine, and payload\n",
+    "\n",
+    "    A full model is left as an exercise for the reader.\n",
+    "\n",
+    "    Variables\n",
+    "    ---------\n",
+    "    W  100 [lbf]  weight\n",
+    "\n",
+    "    \"\"\"\n",
+    "    @parse_variables(__doc__, globals())\n",
+    "    def setup(self):\n",
+    "        pass\n",
+    "\n",
+    "AC = Aircraft()\n",
+    "MISSION = Mission(AC)\n",
+    "M = Model(MISSION.takeoff_fuel, [MISSION, AC])\n",
+    "print(M)\n",
+    "sol = M.solve(verbosity=0)\n",
+    "# save solution to some files\n",
+    "sol.savemat()\n",
+    "sol.savecsv()\n",
+    "sol.savetxt()\n",
+    "sol.save(\"solution.pkl\")\n",
+    "# retrieve solution from a file\n",
+    "sol_loaded = pickle.load(open(\"solution.pkl\", \"rb\"))\n",
+    "\n",
+    "vars_of_interest = set(AC.varkeys)\n",
+    "# note that there's two ways to access submodels\n",
+    "assert (MISSION[\"flight segment\"][\"aircraft performance\"]\n",
+    "        is MISSION.fs.aircraftp)\n",
+    "vars_of_interest.update(MISSION.fs.aircraftp.unique_varkeys)\n",
+    "vars_of_interest.add(M[\"D\"])\n",
+    "print(sol.summary(vars_of_interest))\n",
+    "print(sol.table(tables=[\"loose constraints\"]))\n",
+    "\n",
+    "M.append(MISSION.fs.aircraftp.Wburn >= 0.2*MISSION.fs.aircraftp.wing_aero.D)\n",
+    "sol = M.solve(verbosity=0)\n",
+    "print(sol.diff(\"solution.pkl\", showvars=vars_of_interest, sortbymodel=False))\n",
+    "\n",
+    "# from gpkit.interactive.sankey import Sankey\n",
+    "variablesankey = Sankey(sol, M).diagram(AC.wing.A)\n",
+    "sankey = Sankey(sol, M).diagram(width=1200, height=400, maxlinks=30)\n",
+    "# the line below shows an interactive graph if run in jupyter notebook\n",
+    "sankey  # pylint: disable=pointless-statement\n",
+    "# except (ImportError, ModuleNotFoundError):\n",
+    "#     print(\"Making Sankey diagrams requires the ipysankeywidget package\")\n",
+    "\n",
+    "from gpkit.interactive.references import referencesplot\n",
+    "referencesplot(M)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bb286861-55e7-4fbd-ae61-394e6ad93703",
+   "id": "fe03cb30-e62d-4a0a-a546-12fbde794b29",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using solver 'cvxopt'\n",
-      " for 1 free variables\n",
-      "  in 2 posynomial inequalities.\n",
-      "Solving took 0.0328 seconds.\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5b913e5bfa864d02b4ab453c6f88be18",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "SankeyWidget(layout=Layout(height='400', width='1200'), links=[{'source': 'Model.0001.0001.0001', 'target': 'M…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "sol = m.solve()"
+    "sankey"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c08667d0-5f5f-4df7-8c6a-ab962230aa2c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Optimal Cost\n",
-      "------------\n",
-      " 1.225\n",
-      "\n",
-      "Free Variables\n",
-      "--------------\n",
-      "x : 1.5\n",
-      "\n",
-      "Most Sensitive Constraints\n",
-      "--------------------------\n",
-      "  +0.5 : x ≥ 1.5\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(sol.table())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3ee82880-cb50-443c-ab00-ad980b3a80cb",
-   "metadata": {},
-   "source": [
-    "It worked!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "26e781ec-45c9-4efc-8c65-a67b3d87d0a9",
-   "metadata": {},
-   "source": [
-    "### Maximising Box Volume"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "1d0813a5-2961-47d4-9aa6-40b7e626fd35",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Optimal Cost\n",
-      "------------\n",
-      " 0.003674\n",
-      "\n",
-      "Free Variables\n",
-      "--------------\n",
-      "d : 8.17   [m] depth\n",
-      "h : 8.163  [m] height\n",
-      "w : 4.081  [m] width\n",
-      "\n",
-      "Fixed Variables\n",
-      "---------------\n",
-      "A_{floor} : 50   [m²] upper limit, floor area\n",
-      " A_{wall} : 200  [m²] upper limit, wall area\n",
-      "    alpha : 2         lower limit, wall aspect ratio\n",
-      "     beta : 10        upper limit, wall aspect ratio\n",
-      "    delta : 10        upper limit, floor aspect ratio\n",
-      "    gamma : 2         lower limit, floor aspect ratio\n",
-      "\n",
-      "Variable Sensitivities\n",
-      "----------------------\n",
-      "A_{wall} : -1.5  upper limit, wall area\n",
-      "   alpha : +0.5  lower limit, wall aspect ratio\n",
-      "\n",
-      "Most Sensitive Constraints\n",
-      "--------------------------\n",
-      "  +1.5 : A_{wall} ≥ 2·h·w + 2·h·d\n",
-      "  +0.5 : alpha ≤ h/w\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Parameters\n",
-    "alpha = Variable(\"alpha\", 2, \"-\", \"lower limit, wall aspect ratio\")\n",
-    "beta = Variable(\"beta\", 10, \"-\", \"upper limit, wall aspect ratio\")\n",
-    "gamma = Variable(\"gamma\", 2, \"-\", \"lower limit, floor aspect ratio\")\n",
-    "delta = Variable(\"delta\", 10, \"-\", \"upper limit, floor aspect ratio\")\n",
-    "A_wall = Variable(\"A_{wall}\", 200, \"m^2\", \"upper limit, wall area\")\n",
-    "A_floor = Variable(\"A_{floor}\", 50, \"m^2\", \"upper limit, floor area\")\n",
-    "\n",
-    "# Decision variables\n",
-    "h = Variable(\"h\", \"m\", \"height\")\n",
-    "w = Variable(\"w\", \"m\", \"width\")\n",
-    "d = Variable(\"d\", \"m\", \"depth\")\n",
-    "\n",
-    "# Constraints\n",
-    "constraints = [A_wall >= 2*h*w + 2*h*d,\n",
-    "               A_floor >= w*d,\n",
-    "               h/w >= alpha,\n",
-    "               h/w <= beta,\n",
-    "               d/w >= gamma,\n",
-    "               d/w <= delta]\n",
-    "\n",
-    "# Objective function\n",
-    "V = h*w*d\n",
-    "objective = 1/V  # To maximize V, we minimize its reciprocal\n",
-    "\n",
-    "# Formulate the Model\n",
-    "m = Model(objective, constraints)\n",
-    "\n",
-    "# Solve the Model and print the results table\n",
-    "print(m.solve(verbosity=0).table())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "157cb845-0b68-4945-bdbd-b9ff50cd51e7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5000000000381064\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = Variable(\"x\")\n",
-    "x_squared_min = Variable(\"x^2_{min}\", 2)\n",
-    "sol = Model(x, [x_squared_min <= x**2]).solve(verbosity=0)\n",
-    "sens_x_min = sol[\"sensitivities\"][\"variables\"][x_squared_min]\n",
-    "print(sens_x_min)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53fe885d-4b49-46fb-bc74-1018fe11c22d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
