--- a/examples/GPKit_test.ipynb
+++ b/examples/GPKit_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "305df0bd-5260-4da3-85ec-7e724997c596",
    "metadata": {},
    "outputs": [
@@ -17,7 +17,7 @@
       "\n",
       "Constraints\n",
       "-----------\n",
-      " Mission\n",
+      " Mission1\n",
       "  \"fuel constraints\":\n",
       "    Wfuel[:-1] ≥ Wfuel[1:] + Wburn[:-1]\n",
       "    Wfuel[3] ≥ Wburn[3]\n",
@@ -25,7 +25,7 @@
       "  FlightSegment\n",
       "   AircraftP\n",
       "    Wburn[:] ≥ 0.1·D[:]\n",
-      "    Aircraft.W + Wfuel[:] ≤ 0.5·rho[:]·CL[:]·S·V[:]²\n",
+      "    Aircraft1.W + Wfuel[:] ≤ 0.5·rho[:]·CL[:]·S·V[:]²\n",
       "    \"performance\":\n",
       "      WingAero\n",
       "       D[:] ≥ 0.5·rho[:]·V[:]²·CD[:]·S\n",
@@ -35,14 +35,14 @@
       "   FlightState\n",
       "    (no constraints)\n",
       "\n",
-      " Aircraft\n",
-      "  Aircraft.W ≥ Aircraft.Fuselage.W + Aircraft.Wing.W\n",
+      " Aircraft1\n",
+      "  Aircraft1.W ≥ Aircraft1.Fuselage.W + Aircraft1.Wing.W\n",
       "  Fuselage\n",
       "   (no constraints)\n",
       "\n",
       "  Wing\n",
       "   c = (S/A)^0.5\n",
-      "   Aircraft.Wing.W ≥ S·Aircraft.Wing.rho\n",
+      "   Aircraft1.Wing.W ≥ S·Aircraft1.Wing.rho\n",
       "\n",
       "Optimal Cost\n",
       "------------\n",
@@ -50,50 +50,50 @@
       "\n",
       "Free Variables\n",
       "--------------\n",
-      "      | Mission.FlightSegment.AircraftP.WingAero\n",
+      "      | Mission1.FlightSegment.AircraftP.WingAero\n",
       "    D : [ 2.74      2.73      2.72      2.72     ]  [lbf] drag force\n",
       "\n",
-      "      | Mission.FlightSegment.AircraftP\n",
+      "      | Mission1.FlightSegment.AircraftP\n",
       "Wburn : [ 0.274     0.273     0.272     0.272    ]  [lbf] segment fuel burn\n",
       "Wfuel : [ 1.09      0.817     0.544     0.272    ]  [lbf] fuel weight\n",
       "\n",
-      "      | Aircraft.Wing\n",
+      "      | Aircraft1.Wing\n",
       "    S : 44.14                                       [ft²] surface area\n",
       "    W : 44.14                                       [lbf] weight\n",
       "    c : 1.279                                       [ft]  mean chord\n",
       "\n",
-      "      | Aircraft\n",
+      "      | Aircraft1\n",
       "    W : 144.1                                       [lbf] weight\n",
       "\n",
       "Variable Sensitivities\n",
       "----------------------\n",
-      "    | Aircraft.Fuselage\n",
+      "    | Aircraft1.Fuselage\n",
       "  W : +0.97  weight\n",
       "\n",
-      "    | Aircraft.Wing\n",
+      "    | Aircraft1.Wing\n",
       "  A : -0.67  aspect ratio\n",
       "rho : +0.43  areal density\n",
       "\n",
       "Next Most Sensitive Variables\n",
       "-----------------------------\n",
-      "    | Mission.FlightSegment.AircraftP.WingAero\n",
+      "    | Mission1.FlightSegment.AircraftP.WingAero\n",
       "  e : [ -0.18     -0.18     -0.18     -0.18    ] Oswald efficiency\n",
       "\n",
-      "    | Mission.FlightSegment.FlightState\n",
+      "    | Mission1.FlightSegment.FlightState\n",
       "  V : [ -0.22     -0.21     -0.21     -0.21    ] true airspeed\n",
       "rho : [ -0.12     -0.11     -0.11     -0.11    ] air density\n",
       "\n",
       "Most Sensitive Constraints\n",
       "--------------------------\n",
-      "       | Aircraft\n",
+      "       | Aircraft1\n",
       "  +1.4 : .W ≥ .Fuselage.W + .Wing.W\n",
       "\n",
-      "       | Mission\n",
+      "       | Mission1\n",
       "    +1 : Wfuel[0] ≥ Wfuel[1] + Wburn[0]\n",
       " +0.75 : Wfuel[1] ≥ Wfuel[2] + Wburn[1]\n",
       "  +0.5 : Wfuel[2] ≥ Wfuel[3] + Wburn[2]\n",
       "\n",
-      "       | Aircraft.Wing\n",
+      "       | Aircraft1.Wing\n",
       " +0.43 : .W ≥ S·.rho\n",
       "\n",
       "Insensitive Constraints |below +1e-05|\n",
@@ -109,7 +109,7 @@
       "@@ -31,3 +31,4 @@\n",
       "   Wing\n",
       "    c = (S/A)^0.5\n",
-      "    Aircraft.Wing.W ≥ S·Aircraft.Wing.rho\n",
+      "    Aircraft1.Wing.W ≥ S·Aircraft1.Wing.rho\n",
       "+ Wburn[:] ≥ 0.2·D[:]\n",
       "\n",
       "**********************\n",
@@ -121,6 +121,20 @@
       "    D : [   +1.1%       -         -         -    ] drag force\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "41143267baa246fdad32f4ddd11be8d9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "SankeyWidget(layout=Layout(height='400', width='1200'), links=[{'source': 'Model.0001.0001.0001', 'target': 'M…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -377,34 +391,27 @@
     "# except (ImportError, ModuleNotFoundError):\n",
     "#     print(\"Making Sankey diagrams requires the ipysankeywidget package\")\n",
     "\n",
-    "from gpkit.interactive.references import referencesplot\n",
-    "referencesplot(M)\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "fe03cb30-e62d-4a0a-a546-12fbde794b29",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b913e5bfa864d02b4ab453c6f88be18",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "SankeyWidget(layout=Layout(height='400', width='1200'), links=[{'source': 'Model.0001.0001.0001', 'target': 'M…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sankey"
+    "from gpkit.interactive.references import referencesplot\n",
+    "referencesplot(M)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99c7f217",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
