--- a/pyavd/Models/Performance/test.ipynb
+++ b/pyavd/Models/Performance/test.ipynb
@@ -2,21 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Takeoff1\n",
-      "========\n",
+      "Takeoff\n",
+      "=======\n",
       "\n",
       "Constraints\n",
       "-----------\n",
-      "  TOP = FL/k\n",
-      "  CL_max_TO = 1.92\n",
-      "  TW ≥ WS/(2.1·g·TOP/1.21)\n"
+      "  \"TOP Definition\":\n",
+      "    TOP = FL/k\n",
+      "  \"Lift Coeffcient @ Takeoff Equation\":\n",
+      "    CL_max_TO = 1.92\n",
+      "  \"Thrust to Weight constraint\":\n",
+      "    TW ≤ WS/(2.1·g·TOP/1.21)\n"
      ]
     }
    ],
