Co-authored-by: Gabisanth11 <Gabisanth11@users.noreply.github.com>

--- a/pyavd/Models/Performance/test.ipynb
+++ b/pyavd/Models/Performance/test.ipynb
@@ -14,17 +14,18 @@
       "\n",
       "Constraints\n",
       "-----------\n",
-      "  \"TOP Definition\":\n",
+      "  \"Takeoff Parameter\":\n",
       "    TOP = FL/k\n",
       "  \"Lift Coeffcient @ Takeoff Equation\":\n",
       "    CL_max_TO = 1.92\n",
       "  \"Thrust to Weight constraint\":\n",
-      "    TW ≤ WS/(2.1·g·TOP/1.21)\n"
+      "    TW ≥ WS/(2.1·g·TOP/1.21)\n"
      ]
     }
    ],
    "source": [
-    "from Segments import Takeoff\n",
+    "from Segments import Takeoff, Segment\n",
+    "from gpkit import Model\n",
     "\n",
     "t = Takeoff()\n",
     "print(t)"
