--- a/pyavd/Models/Performance/test.ipynb
+++ b/pyavd/Models/Performance/test.ipynb
@@ -2,34 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Segments import "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'Climb' from 'Segments' (/home/raihaan/Documents/GitHub/PyAVD/pyavd/Models/Performance/Segments.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_468608/1203506503.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mSegments\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mClimb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mClimb\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Climb' from 'Segments' (/home/raihaan/Documents/GitHub/PyAVD/pyavd/Models/Performance/Segments.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Takeoff\n",
+      "=======\n",
+      "\n",
+      "Constraints\n",
+      "-----------\n",
+      "  \"Takeoff Parameter\":\n",
+      "    TOP = FL/k\n",
+      "  \"Lift Coeffcient @ Takeoff Equation\":\n",
+      "    CL_max_TO = 1.92\n",
+      "  \"Thrust to Weight constraint\":\n",
+      "    TW ≥ WS/(CL_max_TO·g·TOP/1.21)\n"
      ]
     }
    ],
    "source": [
-    "from Segments import Climb\n",
+    "from Segments import Takeoff\n",
     "\n",
-    "c = Climb()\n",
+    "c = Takeoff()\n",
     "print(c)\n",
     "\n"
    ]
