--- a/pyavd/Models/Performance/test.ipynb
+++ b/pyavd/Models/Performance/test.ipynb
@@ -2,31 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Takeoff\n",
-      "=======\n",
-      "\n",
-      "Constraints\n",
-      "-----------\n",
-      "  \"Takeoff Parameter\":\n",
-      "    TOP = FL/k\n",
-      "  \"Lift Coeffcient @ Takeoff Equation\":\n",
-      "    CL_max_TO = 1.92\n",
-      "  \"Thrust to Weight constraint\":\n",
-      "    TW ≥ WS/(CL_max_TO·g·TOP/1.21)\n"
+     "ename": "TypeError",
+     "evalue": "setup() missing 4 required positional arguments: 'aircraft', 'AR', 'Cd0', and 'e'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6028/1203506503.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mSegments\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mClimb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mClimb\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Python\\Python39\\lib\\site-packages\\gpkit\\constraints\\model.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, cost, constraints, *args, **kwargs)\u001b[0m\n\u001b[0;32m     51\u001b[0m                 args = tuple(arg for arg in [cost, constraints]\n\u001b[0;32m     52\u001b[0m                              if arg is not None) + args\n\u001b[1;32m---> 53\u001b[1;33m                 \u001b[0mcs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msetup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# pylint: disable=no-member\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     54\u001b[0m                 if (isinstance(cs, tuple) and len(cs) == 2\n\u001b[0;32m     55\u001b[0m                         and isinstance(cs[1], dict)):\n",
+      "\u001b[1;31mTypeError\u001b[0m: setup() missing 4 required positional arguments: 'aircraft', 'AR', 'Cd0', and 'e'"
      ]
     }
    ],
    "source": [
-    "from Segments import Takeoff\n",
+    "from Segments import Climb\n",
     "\n",
-    "c = Takeoff()\n",
+    "c = Climb()\n",
     "print(c)\n",
     "\n"
    ]
@@ -51,7 +46,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
